--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-composer.phar
-/vendor/
-
-# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+/node_modules
+/vendor
+/public/storage
+/storage/*.key
+/storage/app/public/
+/storage/framework/cache/data/
+/storage/framework/sessions/
+/storage/framework/views/
+/storage/logs/
+/bootstrap/cache/
+.env
+.env.backup
+.phpunit.result.cache
+composer.lock
+npm-debug.log
+yarn-error.log
+.idea
+.vscode
+*.min.js
+*.css.map
+/public/build
