--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/scout": "^10.24",
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.18",
+        "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
